--- a/public/index.ejs
+++ b/public/index.ejs
@@ -623,7 +623,7 @@
                                 <div class="app-profile__info-title">
                                     {{ 'trophies.title'|translate }}
                                     <a ng-if="!user.gid"
-                                       ng-href="/user/{{ user.uid }}/trophies"
+                                       ng-href="/user/{{ profile.uid }}/trophies"
                                        class="app-profile__info-more">
                                         <i class="material-icons">open_in_new</i>
                                     </a>
