--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,24 @@ a {
   outline: none;
 }
 
+.app__fanpage {
+  line-height: 0;
+  width: 744px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.app__fanpage-link {
+  display: none;
+}
+
+.fb-like-box {
+  float: left;
+  width: 444px;
+  height: 250px;
+  background-color: #f6f7f9;
+}
+
 .mdl-data-table tbody tr:hover {
   background-color: inherit;
 }
@@ -743,23 +761,11 @@ a {
 }
 
 .app-footer {
-  text-align: center;
-  height: 24px;
-  line-height: 24px;
   padding-bottom: 16px;
 }
 
 .app-layout.is-game .app-footer {
   padding-bottom: 52px;
-}
-
-.app-footer a {
-  color: #9e9e9e;
-  margin-right: 10px;
-}
-
-.app-footer a:last-child {
-  margin-right: 0;
 }
 
 .app-button--create-game {
@@ -1452,7 +1458,7 @@ a {
 }
 
 .app-element .app-element__body {
-  max-height: 568px;
+  max-height: 308px;
   border-top: 1px solid rgba(0,0,0,.12);
   overflow-x: auto;
 }
@@ -2641,7 +2647,7 @@ a {
 @media screen and (max-width: 1024px) {
 
   .app-layout.is-game .app-footer {
-    padding-bottom: 84px;
+    padding-bottom: 120px;
   }
 
   .app-button__fixed--more .app-button.app-button--show {
@@ -3074,8 +3080,28 @@ a {
 
 @media screen and (max-width: 799px) {
 
-  #ad-header {
+  .app-footer {
+    text-align: center;
+    height: 24px;
+    line-height: 24px;
+  }
+
+  .app-footer a {
+    color: #9e9e9e;
+    margin-right: 10px;
+  }
+
+  .app-footer a:last-child {
+    margin-right: 0;
+  }
+
+  #ad-header,
+  .app__fanpage {
     display: none;
+  }
+
+  .app__fanpage-link {
+    display: initial;
   }
   
   .app-profile__game-board {
