fix show profile

--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -13,7 +13,7 @@
 
     <div ng-class="{'app-profile__show-pieces': hasLostPieces(player.lostPieces) }">
         <div class="app-game__player-avatar">
-            <a show-profile="player.uid" href>
+            <a show-profile="player" href>
                 <i ng-if="player.isWinner" class="app-icon app-icon--star material-icons">star</i>
                 <img avatar 
                      class="app-avatar app-profile__avatar" 
@@ -23,7 +23,7 @@
         </div>
         <div class="app-profile__name">
             <i ng-if="player.isWinner" class="app-icon app-icon--star material-icons">star</i>
-            <a href show-profile="player.uid" class="app-profile__name-text">{{ player.name }}</a>
+            <a href show-profile="player" class="app-profile__name-text">{{ player.name }}</a>
             <i ng-if="player.isWinner" class="app-icon app-icon--star material-icons">star</i>
             <span class="app-profile--game-points">({{ player.points }})</span>
             <span ng-if="player.resultPoints"
