--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -35,12 +35,12 @@
                     ng-class="{'is-user': rank.uid === user.uid }">
                     <td class="app-table__rank mdl-data-table__cell--non-numeric">{{ rank.position }}</td>
                     <td class="app-table__avatar mdl-data-table__cell--non-numeric">
-                        <a href show-profile="rank.uid">
+                        <a href show-profile="rank">
                             <img avatar class="app-avatar" ng-src="{{ rank.avatar }}">
                         </a>
                     </td>
                     <td class="app-table__user mdl-data-table__cell--non-numeric">
-                        <a href show-profile="rank.uid">
+                        <a href show-profile="rank">
                             <span class="app-table__name">{{ rank.name }}</span>
                         </a>
                     </td>
