--- a/public/index.ejs
+++ b/public/index.ejs
@@ -631,8 +631,7 @@
                             <div class="app-profile__card-name">{{ profile.name }}</div>
                         </div>
                         <div class="app-modal__content">
-                            <div ng-show="profile.ready"
-                                 data-profile-content>
+                            <div ng-show="profile.ready">
                                 <profile-actions></profile-actions>
                                 <profile-game game-type="'blitz'" game-data="profile.blitz" uid="profile.uid" show-more="!user.gid"></profile-game>
                                 <profile-game game-type="'rapid'" game-data="profile.rapid" uid="profile.uid" show-more="!user.gid"></profile-game>
@@ -659,11 +658,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-
-                            <div class="app-profile__load"
-                                 ng-show="!profile.ready">
-                                <div data-spinner class="mdl-spinner mdl-js-spinner is-active"></div>
                             </div>
                         </div>
                     </div>
