--- a/public/index.ejs
+++ b/public/index.ejs
@@ -800,6 +800,13 @@
                     document.getElementsByTagName('body')[0].appendChild(script);
                 }
             </script>
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({
+                      google_ad_client: "ca-pub-7922409685664362",
+                      enable_page_level_ads: true
+                 });
+            </script>
         <% } %>
 
         <% if (okru) { %>
