--- a/public/index.ejs
+++ b/public/index.ejs
@@ -275,7 +275,13 @@
                 <div ng-show="loadingContent" class="app-overlay">
                     <div class="mdl-spinner mdl-js-spinner is-active"></div>
                 </div>
-                <a name="top"></a>
+                <% if (facebook || vkontakte) { %>
+                    <div style="margin-top: 16px; text-align: center;">
+                        <a href="https://www.worldofchess.online" target="_blank" name="top">www.worldofchess.online</a>
+                    </div>
+                <% } else { %>
+                    <a name="top"></a>
+                <% } %>
                 <% if (!vkontakte) { %>
                     <div id="ad-header" ng-hide="user.gid"></div>
                 <% } %>
