--- a/public/index.ejs
+++ b/public/index.ejs
@@ -78,6 +78,12 @@
             </i>
         </div>
 
+        <div id="modal-adblock"
+             class="app-modal app-overlay"
+             style="background-color: #FF5722">
+            <img src="/images/adblock.png">
+        </div>
+
         <div id="modal-connect" 
              class="app-modal app-modal--login app-modal__bg" 
              role="dialog" 
